--- a/app/five_minute_warning.html
+++ b/app/five_minute_warning.html
@@ -8,9 +8,10 @@
         body {
             display: flex;
             flex-direction: column;
-            height: 97vh; /* doing below 100 seems to hide scroll bar */
             align-items: center;
             justify-content: center;
+            margin: 0;
+            height: 100vh;
         }
 
         form {
