--- a/app/remind.html
+++ b/app/remind.html
@@ -4,21 +4,69 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Remind me</title>
+    <style>
+        body {
+            display: flex;
+            height: 100vh;
+            margin: 0;
+            justify-content: center;
+            align-items: center;
+            background: #bee1ea;
+        }
+
+        #container {
+            padding: 16px;
+            background: white;
+            color: #333333;
+            font-family: sans-serif;
+            border-radius: 8px;
+        }
+
+        h1 {
+            margin-top: 0;
+            margin-bottom: 8px;
+            text-align: center;
+            text-decoration: underline;
+        }
+
+        form > * {
+            margin-top: 8px;
+            margin-bottom: 8px;
+        }
+
+        form > *:last-child {
+            margin-bottom: 0;
+        }
+
+        form > button {
+            display: block;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 <body>
-    <form>
-        <label for="utterance">Say</label>
-        <input type="input" id="utterance">
-        <label>every</label>
-        <input type="number" id="min">
-        <label>minutes to</label>
-        <input type="number" id="max">
-        <label>minutes</label>
-        <button id="set">Set</button>
-    </form>
+    <div id="container">
+        <h1>Remind me</h1>
+        <form>
+            <div>
+                <label for="utterance">Say</label>
+                <input type="input" id="utterance" autofocus>
+            </div>
+            <div>
+                <label>every</label>
+                <input type="number" id="min">
+            </div>
+            <div>
+                <label> to</label>
+                <input type="number" id="max">
+                <label>minutes</label>
+            </div>
+            <button id="set">START</button>
+        </form>
 
-    <!-- Will be dynamically set with application status. -->
-    <div id="status"></div>
+        <!-- Will be dynamically set with application status. -->
+        <div id="status"></div>
+    </div>
 
     <script>
         const KEY_TEXT = 'text';
