remind: add meta description.

--- a/app/remind.html
+++ b/app/remind.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
+    <meta name="description" content="Remind me speaks your chosen phrase once during your provided interval and begins again. Correct your posture or take a breath: it's up to you.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Remind me | mcomella.com</title>
     <style>
