remind: add corrections from html validator.

--- a/app/remind.html
+++ b/app/remind.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8">
     <meta name="description" content="Remind me speaks your chosen phrase once during your provided interval and begins again. Correct your posture or take a breath: it's up to you.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Remind me | mcomella.com</title>
@@ -93,7 +93,7 @@
         <h1>Remind me</h1>
         <form>
             <label for="utterance">Say</label>
-            <input type="input" id="utterance" autofocus>
+            <input id="utterance" autofocus>
             <label>every</label>
             <div id="duration">
                 <input type="number" id="min">
