--- a/app/remind.html
+++ b/app/remind.html
@@ -25,7 +25,7 @@
 
         body {
             display: flex;
-            height: 100vh;
+            height: 100svh;
             margin: 0;
             justify-content: center;
             align-items: center;
